--- a/modulo03/ex22/fundo005.html
+++ b/modulo03/ex22/fundo005.html
@@ -8,16 +8,26 @@
    <style>
     body {
         height: 100vh;
+        /*
         background-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center, top;
         background-repeat: no-repeat;
         background-size: cover;
-        /* background-size container cover auto*/
+        background-attachment:fixed ;
+         background-size container cover auto*
+        
+         short-hand background
+           
+        color > image > position > repeat > [size]  > attachament
+        */
+
+        background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed ;
+        background-size: cover;
     }
     main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -30,8 +40,25 @@
     <main>
         <h1>teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
-        Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
-        Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignisnesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil simos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi distinctio quia sapiente aspernatur similique ad iste quo ipsum sit deleniti, explicabo culpa! Culpa odio enim corrupti?
+            Eos vero impedit dignissimos ipsa quibusdam non sint obcaecati corrupti rerum corporis, possimus modi vitae eius deleniti placeat, fugit odio reiciendis quasi perferendis? Repudiandae doloremque facilis fugit optio nobis ipsam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minima, explicabo nihil nesciunt sed veritatis fuga, quod amet maiores est modi? Nobis magnam fugiat laboriosam perferendis magni vitae numquam. Dolores!
+            Nulla reprehenderit, labore nam ipsa aliquam facilis doloribus nostrum, et placeat officiis commodi d
         </p>
     </main>
 </body>
